<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wakeupdev.movemate.ui.home.ParcelHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calculate"
        android:name="com.wakeupdev.movemate.ui.calculate.CalculateFragment"
        android:label="@string/title_calculate"
        tools:layout="@layout/fragment_calculate" >
        <action
            android:id="@+id/action_navigation_calculate_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shipment"
        android:name="com.wakeupdev.movemate.ui.shipment.ShipmentFragment"
        android:label="@string/title_shipment"
        tools:layout="@layout/fragment_shipment" >
        <action
            android:id="@+id/action_navigation_shipment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.wakeupdev.movemate.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>