<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.ParcelHome">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_color"
                android:padding="5dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circularImageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/profile_pic"
                    android:background="@drawable/circular_image_view_border"
                    android:foreground="@drawable/circular_image_view_mask"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_location"
                    android:textColor="@color/dirty_white"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    app:drawableStartCompat="@drawable/ic_navigation"
                    app:drawableTint="@color/white"
                    app:layout_constraintStart_toEndOf="@id/circularImageView"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="16sp"
                    android:text="@string/default_address"
                    app:layout_constraintTop_toBottomOf="@id/location"
                    app:layout_constraintStart_toEndOf="@id/circularImageView"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_down"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/address"
                    app:layout_constraintTop_toTopOf="@id/address"
                    app:layout_constraintBottom_toBottomOf="@id/address"
                    app:tint="@color/white"
                    />
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_bell"
                    android:scaleType="centerCrop"
                    android:background="@drawable/green_bg"
                    android:backgroundTint="@color/white"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:paddingVertical="2dp"
                    android:background="@drawable/search_view_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/circularImageView"
                    android:gravity="center"
                    >
                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:iconifiedByDefault="false"
                        app:queryHint="Enter the receipt number ..."
                        android:padding="5dp"
                        android:layout_weight="0.9"
                        app:queryBackground="@android:color/transparent"
                        app:goIcon="@drawable/arrow_down"
                        />
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/search_right_img"
                        />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/home_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_screen_color"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="15dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_marginBottom="40dp">
            <TextView
                android:id="@+id/tracking_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracking"
                android:textStyle="bold"
                android:textColor="@color/secondary_color"
                android:textSize="21sp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tracking_details"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/tracking_text"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/bg_tracking_view">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="Shipment Number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:text="NEJ20089934122231"
                    android:textColor="@color/primary_variant_color"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    app:layout_constraintGuide_percent="0.25" />

                <View
                    android:id="@+id/horizontalLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="53dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/shipement_image"
                    app:layout_constraintBottom_toTopOf="@+id/horizontalLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.47" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView2"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/horizontalLine"
                    android:src="@drawable/gift_out"
                    />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:text="Sender"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/horizontalLine" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="56dp"
                    android:text="Atlanta, 5243"
                    android:textSize="15sp"
                    android:textColor="@color/primary_variant_color"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Time"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/horizontalLine" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView3"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    android:src="@drawable/gift_receiver"
                    android:background="@drawable/circular_image_view_border"
                    android:foreground="@drawable/circular_image_view_mask"                    />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="Receiver"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="Chicago, 6342"
                    android:textSize="15sp"
                    android:textColor="@color/primary_variant_color"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                    app:layout_constraintStart_toEndOf="@+id/imageView3" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:background="@drawable/green_bg"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toTopOf="@id/textView9"
                    />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  2 day - 3 days"
                    android:textSize="15sp"
                    android:textColor="@color/primary_variant_color"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Status"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toTopOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/waiting_to_collect"
                    android:textSize="15sp"
                    android:textColor="@color/primary_variant_color"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:id="@+id/horizontalLine2"
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginTop="28dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    />

                <TextView
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Stop"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/accent_color"
                    app:drawableStartCompat="@drawable/ic_add"
                    app:drawableTint="@color/accent_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/horizontalLine2"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/available_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Available Vehicles"
                android:textStyle="bold"
                android:textSize="19sp"
                android:textColor="@color/secondary_color"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tracking_details"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vehicle_recycler"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/vehicle_layout"
                tools:itemCount="5"
                android:layout_below="@id/available_text"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:clipToPadding="false"
                android:overScrollMode="never"
                />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

